--- a/fly.plist
+++ b/fly.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -43,7 +43,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-78D31255-B5C5-454E-BDCE-56B2A66B07BC.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-78D31255-B5C5-454E-BDCE-56B2A66B07BC.ipa</string>
 					<key>variantDescriptors</key>
 					<array>
 						<dict>
@@ -114,7 +114,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-E1477C6A-9FB0-495C-8B0A-9CCC2B119640.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-E1477C6A-9FB0-495C-8B0A-9CCC2B119640.ipa</string>
 					<key>variantDescriptors</key>
 					<array/>
 					<key>variantIds</key>
@@ -131,7 +131,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-A727A99E-5777-48CE-AF9E-67EE62A0B4BF.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-A727A99E-5777-48CE-AF9E-67EE62A0B4BF.ipa</string>
 					<key>variantDescriptors</key>
 					<array/>
 					<key>variantIds</key>
@@ -167,7 +167,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-009E2E51-2844-4797-BD85-0EEF6A034C43.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-009E2E51-2844-4797-BD85-0EEF6A034C43.ipa</string>
 					<key>variantDescriptors</key>
 					<array>
 						<dict>
@@ -385,7 +385,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-230DC344-C9A0-4896-85E8-26A2F0C57805.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-230DC344-C9A0-4896-85E8-26A2F0C57805.ipa</string>
 					<key>variantDescriptors</key>
 					<array/>
 					<key>variantIds</key>
@@ -406,7 +406,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-C7FD01AB-A4D2-42DC-8974-A339DFF46746.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-C7FD01AB-A4D2-42DC-8974-A339DFF46746.ipa</string>
 					<key>variantDescriptors</key>
 					<array/>
 					<key>variantIds</key>
@@ -424,7 +424,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-F30B7D8D-58C4-4689-BE59-26A51AE4C405.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-F30B7D8D-58C4-4689-BE59-26A51AE4C405.ipa</string>
 					<key>variantDescriptors</key>
 					<array/>
 					<key>variantIds</key>
@@ -441,7 +441,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-DF5C6C7D-B38E-49B4-8D89-A3D0DCB5C277.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-DF5C6C7D-B38E-49B4-8D89-A3D0DCB5C277.ipa</string>
 					<key>variantDescriptors</key>
 					<array>
 						<dict>
@@ -460,7 +460,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-6BF70A48-194B-45D0-B96C-E4461C0255EB.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-6BF70A48-194B-45D0-B96C-E4461C0255EB.ipa</string>
 					<key>variantDescriptors</key>
 					<array/>
 					<key>variantIds</key>
@@ -479,7 +479,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/Apps/FlyClient-5435E835-4972-4CDC-A12E-B7FA72327B28.ipa</string>
+					<string>https://192.168.100.145/ios/Apps/FlyClient-5435E835-4972-4CDC-A12E-B7FA72327B28.ipa</string>
 					<key>variantDescriptors</key>
 					<array>
 						<dict>
