--- a/fly.plist
+++ b/fly.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://192.168.100.145/FlyClient.ipa</string>
+					<string>https://192.168.100.145/Release/FlyClient.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
